fdo#44278: fix leaked image when import docx

Unused temporary XShape need to be disposed to avoid remaining garbage
in the document.

Change-Id: Iaf6e720a1c47605136f7f9ccafb605cab6dc260a